# Nous

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.py  start.bat  start.sh
.agent/handoff/: HANDOFF.md
.agent/memory/: MEMORY.md
.agent/workflows/: handoff.md
.spec/: KNOWLEDGE.md  PLAN.md  SPEC.md  TODO.md
agent/: action_executor.py  context_builder.py  event_bus.py  loop.py  scheduler.py
agent/tasks/: anniversary_check.py  consciousness_tick.py  daily_diary.py  morning_greeting.py  proactive_post.py
api/: agent_routes.py  avatar_routes.py  chat_routes.py  conversation_routes.py  dashboard_routes.py  memory_routes.py  settings_routes.py
elevation/: __init__.py  batch_processor.py  elevate.py  prompts.py
llm/: __init__.py  base.py  claude_provider.py  ollama_provider.py  openrouter_provider.py  router.py
memory/: blocks.py  conversation_db.py  db.py  forgetting.py  persona.py  schema.py  user_state.py  vector_store.py
migrations/: memorymcp_to_nous.py
nous_mcp/: server.py
nous_mcp/tools/: agent_tools.py  avatar_tools.py  memory_tools.py  (+1 more)
output/: discord_bot.py  voice_adapter.py  webhook.py
psychology/: __init__.py  appraisal.py  decision_engine.py  drive_system.py  emotional_model.py  engine.py  goal_manager.py  personality.py
templates/: chat.html  dashboard.html  settings.html
tests/: conftest.py  test_api_avatar.py  test_api_chat.py  test_api_dashboard.py  test_context_builder.py  test_emotional_model.py  test_memory.py
(+3 files in other folders)
